week6/lab6/Make.log
g++ -std=c++0x -c  main.cpp
main.cpp: In function ‘int main()’:
main.cpp:234:1: error: expected ‘}’ at end of input
 }
 ^
make: *** [main.o] Error 1
